// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SortingTypes /> render Should SortingTypes render correctly 1`] = `
<form
  action="#"
  className="places__sorting"
  method="get"
>
  <span
    className="places__sorting-caption"
  >
    Sort by 
  </span>
  <span
    className="places__sorting-type"
    onClick={[Function]}
    tabIndex="0"
  >
    Popular
    <svg
      className="places__sorting-arrow"
      height="4"
      width="7"
    >
      <use
        xlinkHref="#icon-arrow-select"
      />
    </svg>
  </span>
  <ul
    className="places__options places__options--custom
        "
    onClick={[Function]}
  >
    <li
      className="places__option
              places__option--active"
      data-sorting-type="popular"
      tabIndex="0"
    >
      Popular
    </li>
    <li
      className="places__option
              "
      data-sorting-type="price-to-high"
      tabIndex="0"
    >
      Price: low to high
    </li>
    <li
      className="places__option
              "
      data-sorting-type="price-to-low"
      tabIndex="0"
    >
      Price: high to low
    </li>
    <li
      className="places__option
              "
      data-sorting-type="top-rated-first"
      tabIndex="0"
    >
      Top rated first
    </li>
  </ul>
</form>
`;

exports[`<SortingTypes /> render Should SortingTypes with opened menu render correctly 1`] = `
<form
  action="#"
  className="places__sorting"
  method="get"
>
  <span
    className="places__sorting-caption"
  >
    Sort by 
  </span>
  <span
    className="places__sorting-type"
    onClick={[Function]}
    tabIndex="0"
  >
    Popular
    <svg
      className="places__sorting-arrow"
      height="4"
      width="7"
    >
      <use
        xlinkHref="#icon-arrow-select"
      />
    </svg>
  </span>
  <ul
    className="places__options places__options--custom
        places__options--opened"
    onClick={[Function]}
  >
    <li
      className="places__option
              places__option--active"
      data-sorting-type="popular"
      tabIndex="0"
    >
      Popular
    </li>
    <li
      className="places__option
              "
      data-sorting-type="price-to-high"
      tabIndex="0"
    >
      Price: low to high
    </li>
    <li
      className="places__option
              "
      data-sorting-type="price-to-low"
      tabIndex="0"
    >
      Price: high to low
    </li>
    <li
      className="places__option
              "
      data-sorting-type="top-rated-first"
      tabIndex="0"
    >
      Top rated first
    </li>
  </ul>
</form>
`;
